--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <input type="file" id="image-input" accept="image/jpeg, image/png, image/jpg">
         </div>
 
-        <button class="predict" onclick="predict()"  style="display:none ;"> Predict </button>
+        <button class="predict" onclick="predict()"  > Predict </button>
 
     </div>
 
